<!--
  ~ Copyright (c) 2019. Bernard Bou <1313ou@gmail.com>
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

	<string name="title_activity_download" tools:ignore="UnusedResources">Download</string>

	<string name="download">Download</string>
	<string name="download_status">Download status</string>
	<string name="download_progress">Download progress</string>

	<!-- button -->
	<string name="show">Show</string>

	<!-- hint -->
	<string name="src">[source]</string>
	<string name="target">[target]</string>
	<string name="expandArchive">Expand archive</string>
	<string name="internal">[internal]</string>

	<!-- ok/error -->
	<string name="ok_data">Data is available</string>
	<string name="ok_data_wn31" tools:ignore="UnusedResources">WN3.1 data loaded</string>
	<string name="ok_data_oewn" tools:ignore="UnusedResources">OEWN data loaded</string>
	<string name="fail_data">Data is unavailable</string>
	<string name="error_null_download_url" tools:ignore="UnusedResources">Null download URL</string>

	<!-- status -->
	<string name="status_download_fail">Download failed!</string>
	<string name="status_download_paused">Download paused!</string>
	<string name="status_download_pending">Download pending!</string>
	<string name="status_download_running">Download in progress!</string>
	<string name="status_download_successful">Download complete!</string>

</resources>
