<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.treebolic.download.DownloadActivity" >

    <include layout="@layout/toolbar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:visibility="invisible" />

    <Button
        android:id="@+id/downloadButton"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableTop="@drawable/ic_download"
        android:text="@string/download" />

    <TextView
        android:id="@+id/src"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downloadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_download_source"
        android:text="@string/src" />

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/downloadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:drawableBottom="@drawable/ic_download_dest"
        android:drawablePadding="5dp"
        android:text="@string/target" />

    <TextView
        android:id="@+id/progressStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/download"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <Button
        android:id="@+id/showButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/show" />

    <CheckBox
        android:id="@+id/expandArchive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/target"
        android:layout_centerHorizontal="true"
        android:text="@string/expandArchive"
        android:visibility="invisible" />

</RelativeLayout>